# EnsureVault

./: APPLICATION_STATUS.md  DEPLOYMENT.md  FINAL_DELIVERY.md  INTEGRATION_NOTES_Divyam.md  LATEST_UPDATES.md  POLICY_PURCHASE_FLOW_ANALYSIS.md  POLICY_REQUEST_DEMO_GUIDE.md  PROJECT_MEMBERS.md  README.md  REMAINING_TASKS.md  SPRINT_PLAN.md  TECHNICAL_DATABASE_DOCUMENTATION.md  TECHNICAL_REFERENCE.md  TRIGGER_DEMONSTRATION.md  USERS_IDENTIFIED.md  docker-compose.yml  implementation_plan.md.resolved  main.py  pyproject.toml
.github/workflows/: main.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/sql/: schema.sql  seed.sql  stored_procedures.sql  triggers.sql  v2_advanced_features.sql  v3_roles_and_users.sql  v4_policy_request_workflow.sql
backend/src/: config.py  database.py  main.py
backend/src/models/: __init__.py  admin.py  agent.py  auth.py  claim.py  common.py  payout.py  policy.py  policy_request.py  policy_type.py  premium.py
backend/src/routers/: admin.py  agents.py  ai.py  auth.py  payouts.py  policies.py  policy_requests.py  policy_types.py  premium.py  risk_assessment.py
backend/src/utils/: validators.py
backend/tests/: conftest.py  test_main.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/__tests__/: Home.test.tsx  Navbar.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx
frontend/app/auth/login/: page.tsx
frontend/components/: Chatbot.tsx  Navbar.tsx  Toast.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: validators.ts
(+17 files in other folders)
